Version 10 	 2010-08-09 	 Tons of Refactoring. New profile listing and search 
Version 9 	 2010-08-08 	 Added announcement support (courtesy: http://github.com/subsume/django-announcements) 
Version 8 	 2010-08-07 	 Adding Sphinx Documentation Template 
Version 7 	 2010-08-07 	 Lots of new functionality. Tons of Cleanup 
Version 6 	 2010-08-06 	 Added Avatars. Lot of UI changes. General Cleanup 
Version 5 	 2010-08-05 	 Lot of UI improvements 
Version 4 	 2010-08-05 	 Changing the theme to adminiziolite 
Version 3 	 2010-08-05 	 Added working version of profile app 
Version 2 	 2010-08-03 	 Added some goodies 
Version 1 	 2010-08-03 	 Added some goodies 
Version 0 	 2010-08-03 	 Empty Project 