@@ -1,0 +1,23 @@
+# Settings for production environment
+
+DEBUG = False
+TEMPLATE_DEBUG = DEBUG
+
+EMAIL_HOST = 'smtp.gmail.com'
+EMAIL_PORT = 587
+EMAIL_HOST_USER = 'my_user_name@gmail.com'
+EMAIL_HOST_PASSWORD = 'my_password'
+EMAIL_USE_TLS = True
+
+
+DATABASES = {
+    'default': {
+        'ENGINE': 'django.db.backends.mysql',
+        'NAME': 'pysis',
+        'USER': 'pysis',
+        'PASSWORD': 'pysis',
+        'HOST': '',
+        'PORT': '',
+    }
+}
+
