@@ -8,15 +8,6 @@
 
 	<h1> Search Results for {{ search_query }} </h1>
 
-	<br />
-	
-	{% if not objects %}
-		<div class="msg error">
-			No Results Found.
-		</div>
-	{% endif %}
-
-	
 	<p></p>
 	
 	{% include page_template %}	
