@@ -1,3 +1,4 @@
+Version 11 	 2010-08-09 	 Changed README 
 Version 10 	 2010-08-09 	 Tons of Refactoring. New profile listing and search 
 Version 9 	 2010-08-08 	 Added announcement support (courtesy: http://github.com/subsume/django-announcements) 
 Version 8 	 2010-08-07 	 Adding Sphinx Documentation Template 
